--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
     pre_build:
         commands:
             - python --version
-            #pylint $CODEBUILD_SRC_DIR/*.py
+            - pylint $CODEBUILD_SRC_DIR/*.py
             - pylint $CODEBUILD_SRC_DIR/CDOS_Proj/*.py
             
 artifacts:
