--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,8 +12,8 @@ phases:
     pre_build:
         commands:
             - python --version
-            - pylint $CODEBUILD_SRC_DIR/*.py
-            - pylint $CODEBUILD_SRC_DIR/cdos_proj/CDOS_Proj/*.py
+            - pylint $CODEBUILD_SRC_DIR
+            - pylint $CODEBUILD_SRC_DIR/CDOS_Proj
             
 artifacts:
     files:
