--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,7 @@ phases:
     pre_build:
         commands:
             - python --version
+            - export PYTHONPATH=$PYTHONPATH:$CODEBUILD_SRC_DIR
             - pylint $CODEBUILD_SRC_DIR/*.py
             - pylint $CODEBUILD_SRC_DIR/bookstore/*.py
             
