--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,14 +5,14 @@ phases:
         runtime-versions:
             python: 3.11
         commands:
-        - pip install --upgrade pip
+        - pip install --upgrade 
+        - pip install pylint pylint-django
         # Install dependencies needed for running the static analysis
         - pip install -r requirements.txt pylint
         
     pre_build:
         commands:
             - python --version
-            - export PYTHONPATH=$PYTHONPATH:$CODEBUILD_SRC_DIR
             - pylint $CODEBUILD_SRC_DIR/*.py
             - pylint $CODEBUILD_SRC_DIR/bookstore/*.py
             
