--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,13 +8,23 @@ phases:
         - pip install --upgrade pip
         - pip install pylint pylint-django
         # Install dependencies needed for running the static analysis
-        - pip install -r requirements.txt pylint
-        
+        - pip install -r requirements.txt 
+        # Install SonarScanner
+        - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
+        - unzip sonar-scanner-cli-4.6.2.2472-linux.zip
+        - export PATH=$PATH:$(pwd)/sonar-scanner-4.6.2.2472-linux/bin
+            
     pre_build:
         commands:
             - python --version
             - pylint $CODEBUILD_SRC_DIR/*.py
             - pylint $CODEBUILD_SRC_DIR/bookstore/*.py
+    
+    build:
+        commands:
+            # Run SonarScanner command
+          - sonar-scanner -Dsonar.projectKey=ayonete_booklib -Dsonar.organization=ayonete -Dsonar.sources=. -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
+
             
 artifacts:
     files:
