--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,7 +23,7 @@ phases:
     build:
         commands:
             # Run SonarScanner command
-          - sonar-scanner -Dsonar.projectKey=ayonete_booklib -Dsonar.organization=ayonete -Dsonar.sources=. -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
+          - sonar-scanner -X -Dsonar.projectKey=ayonete_booklib -Dsonar.organization=ayonete -Dsonar.sources=. -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
 
             
 artifacts:
